gedcomfy/tests/snapshots/tests__golden_files@no_children_or_value.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 TAG\r\n"
expression: "format!(\"{:?}\",\n    Report::new(err).with_source_code(NamedSource::new(filename.to_string_lossy(),\n    data)))"
input_file: gedcomfy/tests/syntax_inputs/no_children_or_value.ged
---
gedcom::record_error::value_missing

  × GEDCOM file contains a record-hierarchy error
  ╰─▶ A record without subrecords must have a value
   ╭─[no_children_or_value.ged:5:1]
 4 │ 1 CHAR ASCII
 5 │ 0 TAG
   · ──┬──
   ·   ╰── this record must contain a value, since it has no subrecords
   ╰────
